# sds

./: .gitignore  .pylintrc  README.md  build.yaml  ci.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
examples/: README.md  iter-audio-dataset.py  iter-audio-video-dataset.py  iter-img2img.py  iter-s3-folder-lora-dataset.py  iter-video2video.py  iter_audio_dataset.py  iter_audio_video_dataset.py  iter_image_dataset.py  iter_img2img.py  iter_multistream.py  iter_s3_folder_lora_dataset.py  iter_video2video.py
examples/bq-configs/: audio-video.yaml  snapgen-v4.yaml  vggsounds.yaml
scripts/: construct_index.py  construct_index_from_bq.py  construct_index_from_bq_query.py  construct_index_from_bq_small.py  prepare_bq_table.py  profile_store.py  slice_val_set.py  unpack.py
sds/: __init__.py  dataloader.py  dataset.py  downloader.py  index.py  lazy_thread_pool.py  msdl.py  structs.py
sds/transforms/: functional.py  presets.py  video_decoder.py
sds/utils/: data_utils.py  distributed.py  download.py  misc.py  os_utils.py
tests/: test_dataloader.py  test_dataset.py  test_downloader.py  test_index.py  test_index_slicing.py  test_lazy_thread_pool.py  test_magic_shuffle.py  test_misc_utils.py  test_os_utils.py
