[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-dataset"
version = "0.3.7"
authors = [
  { name="Snap", email="iskorokhodov@snap.com" },
]
description = "Streaming Dataset library for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=12.0.0",
    "awscli>=1.38.26",
    "beartype>=0.21.0",
    "duckdb>=1.3.2",
    "einops>=0.8.1",
    "gpustat>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "polars[numpy,pandas,pyarrow]>=1.32.3"
]

[project.urls]
Homepage = "https://github.sc-corp.net/Snapchat/sds"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=4.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["sds"]
